// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectivityWarningDialog when user only connection mode is through AP renders the correct content 1`] = `
<React.Fragment>
  After your pi-top restarts, you will need to reconnect your computer to the 'pi-top-XXXX' Wi-Fi network to finish onboarding.
  <br />
  <br />
  This page may not update until you have reconnected to the network.
</React.Fragment>
`;

exports[`ConnectivityWarningDialog when user only connection mode is through AP renders the correct message 1`] = `
<React.Fragment>
  <span
    className="dialogTitle"
  >
    Reconnect to the pi-top network
     
  </span>
</React.Fragment>
`;

exports[`ConnectivityWarningDialog when user should switch networks renders the correct content 1`] = `
<React.Fragment>
  Your pi-top was connected to a Wi-Fi network in a previous step, but your computer is still on the pi-top's hotspot.
  <br />
  <br />
  Please switch your computer to the same Wi-Fi network as your pi-top and click refresh below.
</React.Fragment>
`;

exports[`ConnectivityWarningDialog when user should switch networks renders the correct message 1`] = `
<React.Fragment>
  <span
    className="dialogTitle"
  >
    Reconnect to your Wi-Fi
     
  </span>
</React.Fragment>
`;
